# mathcca

./: .gitignore  .gitmodules  CMakeLists.txt  REUSE.toml  main.cpp  main.cu  reuse.spdx
examples/: CMakeLists.txt
examples/0_host_matmul/: CMakeLists.txt  main.cpp  main.x  readme.md
examples/1_host_trans/: CMakeLists.txt  main.cpp  main.x  readme.md
examples/2_host_norm/: CMakeLists.txt  main.cpp  main.x  main_const.cpp  main_const.x  main_rand.cpp  readme.md  readme_const.md  readme_rand.md
examples/3_dev_matmul/: main.cu  main.x
examples/3_host_arith/: CMakeLists.txt  main.cpp
examples/4_dev_matmul/: CMakeLists.txt  main.cu  readme.md
examples/4_dev_trans/: main.cu  main.x  readme.md
examples/5_dev_norm/: main.cu  main.x  readme.md
examples/5_dev_trans/: CMakeLists.txt  main.cu  readme.md
examples/6_dev_norm/: CMakeLists.txt  main.cu  readme.md
examples/6_streams/: main.cu  main_breadth.cu  main_depth.cu  main_old.cu  readme.md
examples/7_dev_arith/: CMakeLists.txt  main.cu
examples/8_dev_streams/: CMakeLists.txt  main_breadth.cu  main_depth.cu  readme.md
include/: mathcca.h  mathcca.hpp
include/mathcca/: arithmetic_type.h  base_iterator.h  base_matrix.h  common_algorithm.h  copy.h  copy.inl  device_allocator.h  device_helper.h  device_iterator.h  device_matmul.h  device_matrix.h  device_matrix.inl  device_norm.h  device_ptr.h  device_transpose.h  execution_policy.h  fill_const.h  fill_iota.h  fill_iota.inl  fill_rand.h  host_algorithm.h  host_allocator.h  host_iterator.h  host_matmul.h  host_matrix.h  host_matrix.inl  host_norm.h  host_ptr.h  host_transpose.h  implementation_policy.h  matmul.h  matmul.inl  norm.h  norm.inl  pinnedhost_allocator.h  reduce_sum.h  reduce_sum.inl  transform_reduce_sum.h  transform_reduce_sum.inl  transpose.h  (+1 more)
include/mathcca/detail/: base_iterator.h  base_matrix.h  copy_impl.h  copy_impl.inl  device_copy.inl  device_fill_const.inl  device_fill_iota.inl  device_fill_rand.inl  device_matmul.inl  device_matrix.inl  device_norm.inl  device_reduce_sum.inl  device_shmem_proxy.h  device_transform_reduce_sum.inl  device_transpose.inl  fill_const.inl  fill_const_impl.h  fill_const_impl.inl  fill_iota_impl.h  fill_iota_impl.inl  fill_rand.inl  fill_rand_impl.h  fill_rand_impl.inl  host_algorithm.inl  host_copy.inl  host_fill_const.inl  host_fill_iota.inl  host_fill_rand.inl  host_matmul.inl  host_matrix.inl  host_norm.inl  host_reduce_sum.inl  host_transform_reduce_sum.inl  host_transpose.inl  matmul_impl.h  matmul_impl.inl  nextPow2.h  norm_impl.h  norm_impl.inl  reduce_sum.inl  (+7 more)
test/: dev_copy_ctor_dp.cu  dev_copy_ctor_sp.cu  dev_copy_dp.cu  dev_copy_sp.cu  dev_fill_dp.cu  dev_fill_sp.cu  dev_matarith_dp.cu  dev_matarith_sp.cu  dev_matmul_dp.cu  dev_matmul_sp.cu  dev_move_ctor_dp.cu  dev_move_ctor_sp.cu  dev_norm_dp.cu  dev_norm_sp.cu  dev_reduce_dp.cu  dev_reduce_sp.cu  dev_trans_dp.cu  dev_trans_reduce_dp.cu  dev_trans_reduce_sp.cu  dev_trans_sp.cu  host_copy_ctor_dp.cpp  host_copy_ctor_sp.cpp  host_copy_dp.cpp  host_copy_sp.cpp  host_fill_dp.cpp  host_fill_sp.cpp  host_matarith_dp.cpp  host_matarith_sp.cpp  host_matmul_dp.cpp  host_matmul_sp.cpp  host_move_ctor_dp.cpp  host_move_ctor_sp.cpp  host_norm_dp.cpp  host_norm_sp.cpp  host_reduce_dp.cpp  host_reduce_sp.cpp  host_trans_dp.cpp  host_trans_reduce_dp.cpp  host_trans_reduce_sp.cpp  host_trans_sp.cpp  (+1 more)
tests/: CMakeLists.txt
tests/test_dev/: CMakeLists.txt  dev_copy_ctor_dp.cu  dev_copy_ctor_sp.cu  dev_copy_dp.cu  dev_copy_sp.cu  dev_fill_dp.cu  dev_fill_sp.cu  dev_matarith_dp.cu  dev_matarith_sp.cu  dev_matmul_dp.cu  dev_matmul_sp.cu  dev_move_ctor_dp.cu  dev_move_ctor_sp.cu  dev_norm_dp.cu  dev_norm_sp.cu  dev_reduce_dp.cu  dev_reduce_sp.cu  dev_trans_dp.cu  dev_trans_reduce_dp.cu  dev_trans_reduce_sp.cu  dev_trans_sp.cu
tests/test_host/: CMakeLists.txt  host_copy_ctor_dp.cpp  host_copy_ctor_sp.cpp  host_copy_dp.cpp  host_copy_sp.cpp  host_fill_dp.cpp  host_fill_sp.cpp  host_matarith_dp.cpp  host_matarith_sp.cpp  host_matmul_dp.cpp  host_matmul_sp.cpp  host_move_ctor_dp.cpp  host_move_ctor_sp.cpp  host_norm_dp.cpp  host_norm_sp.cpp  host_reduce_dp.cpp  host_reduce_sp.cpp  host_trans_dp.cpp  host_trans_reduce_dp.cpp  host_trans_reduce_sp.cpp  host_trans_sp.cpp
